--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
 
   ci-build-test:
     name: CI build and unit test
-    runs-on: distroless-ci-large-ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Mount bazel caches
@@ -59,7 +59,7 @@ jobs:
 
   ci-images:
     name: CI image tests
-    runs-on: distroless-ci-large-ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Mount bazel caches
