--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,15 +33,15 @@ jobs:
           restore-keys: |
             bazel-cache-deps-ci1-${{ github.sha }}
             bazel-cache-deps-ci1-
-      - name: Free space
-        run: |
-          sudo apt-get remove -y '^dotnet-.*'
-          sudo apt-get remove -y '^llvm-.*'
-          sudo apt-get remove -y 'php.*'
-          sudo apt-get remove -y azure-cli google-cloud-cli google-chrome-stable firefox powershell mono-devel
-          sudo apt-get autoremove -y
-          sudo apt-get clean
-          rm -rf /usr/share/dotnet/
+      # - name: Free space
+      #   run: |
+      #     sudo apt-get remove -y '^dotnet-.*'
+      #     sudo apt-get remove -y '^llvm-.*'
+      #     sudo apt-get remove -y 'php.*'
+      #     sudo apt-get remove -y azure-cli google-cloud-cli google-chrome-stable firefox powershell mono-devel
+      #     sudo apt-get autoremove -y
+      #     sudo apt-get clean
+      #     rm -rf /usr/share/dotnet/
       - name: Fetch # this can take a long time if there are a lot of errors
         run: |
           for i in $(seq 10); do 
@@ -71,15 +71,15 @@ jobs:
           restore-keys: |
             bazel-cache-deps-ci2-${{ github.sha }}
             bazel-cache-deps-ci2-
-      - name: Free space
-        run: |
-          sudo apt-get remove -y '^dotnet-.*'
-          sudo apt-get remove -y '^llvm-.*'
-          sudo apt-get remove -y 'php.*'
-          sudo apt-get remove -y azure-cli google-cloud-cli google-chrome-stable firefox powershell mono-devel
-          sudo apt-get autoremove -y
-          sudo apt-get clean
-          rm -rf /usr/share/dotnet/
+      # - name: Free space
+      #   run: |
+      #     sudo apt-get remove -y '^dotnet-.*'
+      #     sudo apt-get remove -y '^llvm-.*'
+      #     sudo apt-get remove -y 'php.*'
+      #     sudo apt-get remove -y azure-cli google-cloud-cli google-chrome-stable firefox powershell mono-devel
+      #     sudo apt-get autoremove -y
+      #     sudo apt-get clean
+      #     rm -rf /usr/share/dotnet/
 
       - name: Fetch
         run: |
